fix: class typo

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </style>
   </head>
   <body>
-    <h1 class="typo">Hoàng Vũ ♥ Trúc Linh</h1>
+    <h1 class="typo-love-word">Hoàng Vũ ♥ Trúc Linh</h1>
     <div class="box">
       <canvas id="pinkboard"></canvas>
     </div>
